tests/NormalTests/paczka2/big_fuzzy/44157541.err
Error in line 6: ò616 ò207 41,4
Error in line 4: 8MxEy7DS A207 59,3
Error in line 11: A616 S165 98,5
Error in line 31: RajHjp5fL S165 3,8
Error in line 30: 8MxEy7DS S165 45,2
Error in line 66: CVd2WxWe A207 14,0
Error in line 67: yoh A616 91,1
Error in line 92: RajHjp5fL S624 93,2
Error in line 91: 8MxEy7DS S624 67,7
Error in line 86: yoh S165 91,1
Error in line 96: yoh A616 92,8
Error in line 94: RajHjp5fL A207 93,3
Error in line 102: A616 A207 82,94
Error in line 106: RajHjp5fL A207 37,00
Error in line 104: nrKO90YW8w S165 54,4
Error in line 113: nrKO90YW8w S165 42,6
Error in line 111: RajHjp5fL A207 99,9
Error in line 105: pvYoIZlzmM S624 1,8
Error in line 128: yoh S165 36,5
Error in line 131: A616 A207 254,0
Error in line 135: A616 A207 30,6
Error in line 134: yoh S165 35,8
Error in line 136: A616 S165 61,6
Error in line 139: A616 S624 35,2
Error in line 152: CVd2WxWe S624 47,5
Error in line 167: yoh S165 27,78
Error in line 174: yoh A616 5,3
Error in line 177: yoh S165 0,0
Error in line 179: nrKO90YW8w S165 5,7
Error in line 180: A616 A616 88,4
Error in line 189: RajHjp5fL S165 81,3
Error in line 213: 8MxEy7DS A207 320,1
Error in line 210: A616 S624 309,3
Error in line 212: yoh A207 68,5
Error in line 221: yoh S624 -3,5
Error in line 211: RajHjp5fL S624 250,2
Error in line 224: RajHjp5fL A20 33,5
Error in line 236: RajHjp5fL A207 105,6
Error in line 237: RajHjp5fL A616 38,3
Error in line 240: 8MxEy7DS A207 60,06
Error in line 247: pvYoIZlzmM A616 86,3
